--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>My Library</h1>
     <main>
-        <form>
+        <form method="post">
             <div class="field">
                 <label for="title">Title</label>
                 <input type="text" name="title" id="title">
@@ -30,7 +30,7 @@
             </div>
             <div class="field">
                 <label for="price">Price</label>
-                <input type="text" name="price" id="price">
+                <input type="number" name="price" id="price">
             </div>
             <button type="submit">Submit</button>
         </form>
@@ -39,7 +39,8 @@
     </main>
 
 
-    <script type="module" src="js/database.js"></script>
-    <script src="js/main.js" type="module"></script>
+    <script type="module" src="js/handleBooks.js"></script>
+    <!-- <script src="js/main.js" type="module"></script> -->
+    <!-- <script src="js/main.js"></script> -->
 </body>
 </html>
